--- a/app/src/main/res/layout/titulo.xml
+++ b/app/src/main/res/layout/titulo.xml
@@ -13,4 +13,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="T1v1"/>
+    <!--TODO borrar archivo -->
 </android.support.v7.widget.Toolbar>
