--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:onClick="easterEgg"/>
                 </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
