--- a/app/src/main/res/layout/lineaspiner.xml
+++ b/app/src/main/res/layout/lineaspiner.xml
@@ -30,8 +30,8 @@
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="100sp"
+        android:layout_width="200dp"
+        android:layout_height="150sp"
         android:src="@drawable/albacete"
         android:id="@+id/imagenCiudad"
         android:layout_toEndOf="@+id/descripcion"
