--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
     <!--START Cabecera / Toolbar-->
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,25 +14,44 @@
         android:layout_width="match_parent"
         android:elevation="4dp"
         android:id="@+id/toolBuena">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/portada" />
-        <TextView android:id="@+id/toolbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="T1v1"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/portada" />
+            <TextView android:id="@+id/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="T1v1"
+                android:layout_weight="1"
+                />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:layout_weight="0"
+                android:background="@color/blanco"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
     <!--END Cabecera / Toolbar-->
-        <ScrollView
+
+
+    <ScrollView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity"
-            android:background="@drawable/cascosandroid">
+            android:background="@drawable/cascosandroid"
+            android:layout_marginLeft="10dp">
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -192,5 +210,4 @@
                 </TableRow>
             </TableLayout>
         </ScrollView>
-
 </android.support.constraint.ConstraintLayout>
