--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,7 +116,8 @@
                                 android:id="@+id/radioButton6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/g1" />
+                                android:text="@string/g1"
+                                android:checked="true"/>
 
                             <RadioButton
                                 android:id="@+id/radioButton26"
