--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,8 +117,7 @@
                                 android:id="@+id/btnACDC"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/g1"
-                                android:checked="true"/>
+                                android:text="@string/g1"/>
 
                             <RadioButton
                                 android:id="@+id/btnRammsteins"
