--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <!--START Cabecera / Toolbar-->
+    <!--
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@color/blanco"
@@ -40,7 +41,8 @@
                 app:srcCompat="@android:drawable/ic_menu_delete" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
-    <!--END Cabecera / Toolbar-->
+    -->
+    <!-- END Cabecera / Toolbar-->
 
 
     <ScrollView
@@ -54,8 +56,7 @@
             android:layout_marginLeft="10dp">
             <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="55dp">
+                android:layout_height="wrap_content">
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -221,8 +222,7 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginBottom="55dp">
+                    android:layout_weight="1">
 
                     <Button
                         android:id="@+id/btnEnviar"
