--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,7 +207,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="@string/tFecha"
+                        android:hint="@string/tFecha"
                         android:id="@+id/txtFechaNacimiento"
                         android:layout_weight="1"/>
                     <Button
