--- a/app/src/main/res/layout/dialogo_emergente.xml
+++ b/app/src/main/res/layout/dialogo_emergente.xml
@@ -15,6 +15,6 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enviar¿?"
+        android:text="@string/enviar"
         android:textAlignment="center"/>
 </LinearLayout>
